# sales_store_prediction_segmentation

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
feature_repo/feature_repo/: feature_store.yaml
feature_repo/feature_repo/data/: online_store.db  registry.db
ml_prediction_segmentation/: __init__.py  dataset.py  features.py  plots.py  preprocess.py
ml_prediction_segmentation/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/0/88e31f81567f40688c24d304fb975883/: meta.yaml
mlruns/0/88e31f81567f40688c24d304fb975883/metrics/: Calinski-Harabasz Index  Davies-Bouldin Index  Silhouette Score
mlruns/0/88e31f81567f40688c24d304fb975883/tags/: mlflow.runName
mlruns/0/c7364389a92f46c9a759093a9ce733cb/: meta.yaml
mlruns/0/c7364389a92f46c9a759093a9ce733cb/artifacts/: estimator.html
mlruns/0/c7364389a92f46c9a759093a9ce733cb/inputs/703a470ae54ac695f62954bd9d17454e/: meta.yaml
mlruns/0/c7364389a92f46c9a759093a9ce733cb/params/: cluster  preprocessor  preprocessor__cat  preprocessor__num__steps  preprocessor__transformers
mlruns/0/c7364389a92f46c9a759093a9ce733cb/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/datasets/fd9a043b99a7e59150f0a787224d5c34/: meta.yaml
mlruns/0/models/m-f1ce8d4139e1418ead2a16f8ff1f4407/: meta.yaml
models/: BaggingRegressor_10.pkl  KMeans_4.pkl  XGBRegressor_100.pkl
notebooks/: 1_preprocess.ipynb  2_features.ipynb  3_train.ipynb  preprocess.ipynb  project.ipynb  scripts_project.ipynb
(+9 files in other folders)
