[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_prediction_segmentation"
version = "0.0.1"
description = "Machine learning to predict sales store"
authors = [
  { name = "EdynsonCoronadoIcochea" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dagshub>=0.6.3",
    "feast>=0.52.0",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mlflow>=3.3.1",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pmdarima>=2.0.4",
    "prophet>=1.1.7",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "xgboost>=3.0.4",
]
requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["ml_prediction_segmentation"]
include = ["pyproject.toml", "ml_prediction_segmentation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_prediction_segmentation"]
force-sort-within-sections = true

